tests/samples/valid/pointer_to_array.pn
fn main() -> u8
{
	var buffer: [3]u8 = [20, 32, 0x00];
	var x: &[3]u8 = &buffer;
	x[2] = 200;
	return: x[2]
}
